objects/Pay_Rule_Line__c/Pay_Rule_Line__c.object-meta.xml
<CustomObject>
    <label>Pay Rule Line</label>
    <nameField>
        <displayFormat>PRL-{000000}</displayFormat>
        <label>Line No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Rule Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>