objects/Pay_Rule_Line__c/fields/After_Time__c.field-meta.xml
<CustomField>
    <fullName>After_Time__c</fullName>
    <label>Time After</label>
    <type>Time</type>
</CustomField>