objects/Pay_Rule_Line__c/fields/Before_Time__c.field-meta.xml
<CustomField>
    <fullName>Before_Time__c</fullName>
    <label>Time Before</label>
    <type>Time</type>
</CustomField>