objects/Pay_Rule_Line__c/fields/Blocked_for_Export__c.field-meta.xml
<CustomField>
    <fullName>Blocked_for_Export__c</fullName>
    <formula>OR( Pay_Rule__r.Blocked__c == TRUE , Blocked__c == TRUE)</formula>
    <label>Blocked for Export</label>
    <type>Checkbox</type>
</CustomField>