objects/Pay_Rule_Line__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>