objects/Pay_Rule_Line__c/fields/Daily_OT_After_Num_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Daily_OT_After_Num_of_Hours__c</fullName>
    <label>Daily OT After # of Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>