objects/Pay_Rule_Line__c/fields/Double_Time_Rate_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Double_Time_Rate_Multiple__c</fullName>
    <label>Double Time Rate Multiple</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>