objects/Pay_Rule_Line__c/fields/DT_Fringe_Amount__c.field-meta.xml
<CustomField>
    <fullName>DT_Fringe_Amount__c</fullName>
    <label>DT Fringe Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>