objects/Pay_Rule_Line__c/fields/Eligible_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Holidays__c</fullName>
    <label>Eligible Holidays</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Holiday_List</valueSetName>
    </valueSet>
</CustomField>