objects/Pay_Rule_Line__c/fields/Fringe__c.field-meta.xml
<CustomField>
    <fullName>Fringe__c</fullName>
    <label>Fringe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>