objects/Pay_Rule_Line__c/fields/Holiday_with_Double_Time_Pay__c.field-meta.xml
<CustomField>
    <fullName>Holiday_with_Double_Time_Pay__c</fullName>
    <label>Holiday with Double Time Pay</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Holiday_List</valueSetName>
    </valueSet>
</CustomField>