objects/Pay_Rule_Line__c/fields/Holidays_with_Overtime_Pay__c.field-meta.xml
<CustomField>
    <fullName>Holidays_with_Overtime_Pay__c</fullName>
    <label>Holiday with Overtime Pay</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Holiday_List</valueSetName>
    </valueSet>
</CustomField>