objects/Pay_Rule_Line__c/fields/OT_Fringe_Amount__c.field-meta.xml
<CustomField>
    <fullName>OT_Fringe_Amount__c</fullName>
    <label>OT Fringe Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>