objects/Pay_Rule_Line__c/fields/Overtime_Rate_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Rate_Multiple__c</fullName>
    <label>Overtime Rate Multiple</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>