objects/Pay_Rule_Line__c/fields/Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code__c</fullName>
    <label>Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Show_Pay_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>