objects/Pay_Rule_Line__c/fields/Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule__c</fullName>
    <label>Pay Rule</label>
    <referenceTo>Pay_Rule__c</referenceTo>
    <relationshipLabel>Pay Rule Lines</relationshipLabel>
    <relationshipName>Pay_Rule_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>