objects/Pay_Rule_Line__c/fields/Peak_Season_End__c.field-meta.xml
<CustomField>
    <fullName>Peak_Season_End__c</fullName>
    <label>Peak Season End</label>
    <type>Date</type>
</CustomField>