objects/Pay_Rule_Line__c/fields/Peak_Season_Start__c.field-meta.xml
<CustomField>
    <fullName>Peak_Season_Start__c</fullName>
    <label>Peak Season Start</label>
    <type>Date</type>
</CustomField>