objects/Pay_Rule_Line__c/fields/Peak_Season_Sunday_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Peak_Season_Sunday_Pay_Code__c</fullName>
    <label>Peak Season Sunday Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>