objects/Pay_Rule_Line__c/fields/PW_Labor_Category__c.field-meta.xml
<CustomField>
    <fullName>PW_Labor_Category__c</fullName>
    <label>PW Labor Category</label>
    <type>TextArea</type>
</CustomField>