objects/Pay_Rule_Line__c/fields/PW_Wage_Determination__c.field-meta.xml
<CustomField>
    <fullName>PW_Wage_Determination__c</fullName>
    <label>PW Wage Determination</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>