objects/Pay_Rule_Line__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource_Type__c.Category__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Pay Rule Lines</relationshipLabel>
    <relationshipName>Pay_Rule_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>