objects/Pay_Rule_Line__c/fields/Saturday_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Pay_Code__c</fullName>
    <label>Saturday Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>