objects/Pay_Rule_Line__c/fields/Show_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Show_Pay_Code__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Pay Code</label>
    <type>Checkbox</type>
</CustomField>