objects/Pay_Rule_Line__c/fields/Time_After_in_Text__c.field-meta.xml
<CustomField>
    <fullName>Time_After_in_Text__c</fullName>
    <formula>TEXT( After_Time__c )</formula>
    <label>Time After in Text</label>
    <type>Text</type>
</CustomField>