objects/Pay_Rule_Line__c/fields/Time_After_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Time_After_Pay_Code__c</fullName>
    <label>Time After Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_Rate_Code</valueSetName>
    </valueSet>
</CustomField>