objects/Pay_Rule_Line__c/fields/Time_Before_In_Text__c.field-meta.xml
<CustomField>
    <fullName>Time_Before_In_Text__c</fullName>
    <formula>TEXT( Before_Time__c )</formula>
    <label>Time Before In Text</label>
    <type>Text</type>
</CustomField>