objects/Pay_Rule_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pay_Rule__c</columns>
    <columns>Eligible_Holidays__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eligible_Holidays__c</field>
        <operation>includes</operation>
        <value>Juneteenth Actual,Juneteenth PW Observed</value>
    </filters>
    <label>All</label>
</ListView>